[15363] add backward compatibility for existing connections.